<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/home" />

    <item
        android:id="@+id/action_friend"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/friend" />

    <item
        android:id="@+id/action_create"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/create" />

    <item
        android:id="@+id/action_notification"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/notification" />

    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_launcher_background"
        android:title="@string/setting" />

</menu>