<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.HomeFragment">

    <TextView
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/create_title"
        android:textColor="@color/white"
        android:textSize="@dimen/small_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/create_room_name"
        android:textColor="@color/white"
        android:textSize="@dimen/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_title" />

    <EditText
        android:id="@+id/edit_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/brown_grey"
        android:text="@string/room_usage"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text1" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/create_max_number"
        android:textColor="@color/white"
        android:textSize="@dimen/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_place_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/number_select_box"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:background="#e3e3e3"
        android:backgroundTint="@color/grey"
        app:cardCornerRadius="32dp"
        app:cardElevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/select_box"
                android:gravity="center"
                android:text="2명"
                android:textColor="@color/brown_grey"
                android:textSize="@dimen/small_title" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/brown_grey" />

            <TextView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="@dimen/select_box"
                android:gravity="center"
                android:text="3명"
                android:textColor="@color/black"
                android:textSize="@dimen/small_title" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/brown_grey" />

            <TextView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="@dimen/select_box"
                android:gravity="center"
                android:text="4명"
                android:textColor="@color/brown_grey"
                android:textSize="@dimen/small_title" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/create_tag"
        android:textColor="@color/white"
        android:textSize="@dimen/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_select_box" />

    <EditText
        android:id="@+id/edit_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/brown_grey"
        android:text="@string/tag_usage"
        android:textColor="@color/dark_grey"
        android:textSize="@dimen/content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text3" />

    <LinearLayout
        android:id="@+id/thumbnail_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_title"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_tags">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small_title"
            android:text="@string/create_thumbnail"
            android:textColor="@color/white"
            android:textSize="@dimen/content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/small_title"
            android:layout_height="@dimen/small_title"
            android:gravity="end"
            android:src="@drawable/more" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cover_setting"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_title"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thumbnail_setting">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/small_title"
            android:layout_gravity="left"
            android:text="@string/create_cover"
            android:textColor="@color/white"
            android:textSize="@dimen/content" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/small_title"
            android:layout_height="@dimen/small_title"
            android:gravity="end"
            android:src="@drawable/more" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/create_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="12.5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/place_create_button"
            android:textColor="@color/white"
            android:textSize="@dimen/small_title"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>